--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "todolist",
-  "version": "0.0.0",
+  "name": "todolist-frontend",
+  "version": "1.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint --fix",
+    "build:dev": "ng build --configuration=dev",
+    "build:prod": "ng build --configuration=production",
+    "start": "ng serve --configuration=dev",
+    "start:build": "./node_modules/.bin/lite-server -p3000 --baseDir=\"dist\"",
+    "start:prod": "ng serve --configuration=production",
+    "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -24,13 +25,13 @@
     "core-js": "2.5.4",
     "font-awesome": "4.7.0",
     "rxjs": "6.0.0",
+    "uuid": "3.3.3",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "6.0.3",
     "@angular-devkit/build-angular": "0.6.8",
-    "typescript": "2.7.2",
     "@angular/cli": "6.0.8",
+    "@angular/compiler-cli": "6.0.3",
     "@angular/language-service": "6.0.3",
     "@types/jasmine": "2.8.6",
     "@types/jasminewd2": "2.0.3",
@@ -43,8 +44,10 @@
     "karma-coverage-istanbul-reporter": "2.0.0",
     "karma-jasmine": "1.1.1",
     "karma-jasmine-html-reporter": "0.2.2",
+    "lite-server": "2.5.4",
     "protractor": "5.3.0",
     "ts-node": "5.0.1",
-    "tslint": "5.9.1"
+    "tslint": "5.9.1",
+    "typescript": "2.7.2"
   }
 }
